--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@types/md5": "^2.3.5",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "howler": "^2.2.4",
     "lucide-react": "^0.468.0",
+    "md5": "^2.3.0",
     "next": "15.1.1",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
