--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.14.1",
     "react-responsive": "^10.0.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
